--- a/Lime.vcxproj.filters
+++ b/Lime.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Source Files\Scene3D">
       <UniqueIdentifier>{c6e25fbc-a86d-46ab-b7b7-a4c247aed64f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="IrrAsimp">
+      <UniqueIdentifier>{cfae3e7c-cb62-427c-b4fd-b96e44ffc960}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lime.cpp">
@@ -38,6 +41,15 @@
     </ClCompile>
     <ClCompile Include="Sound.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\irrasimp\IrrAssimp\IrrAssimp.cpp">
+      <Filter>IrrAsimp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\irrasimp\IrrAssimp\IrrAssimpImport.cpp">
+      <Filter>IrrAsimp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\irrasimp\IrrAssimp\IrrAssimpUtils.cpp">
+      <Filter>IrrAsimp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -86,11 +98,23 @@
     <ClInclude Include="LimeReceiver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Light.h">
+      <Filter>Source Files\Scene3D</Filter>
     </ClInclude>
     <ClInclude Include="Sound.h">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\irrasimp\IrrAssimp\IrrAssimp.h">
+      <Filter>IrrAsimp</Filter>
+    </ClInclude>
+    <ClInclude Include="..\irrasimp\IrrAssimp\IrrAssimpImport.h">
+      <Filter>IrrAsimp</Filter>
+    </ClInclude>
+    <ClInclude Include="..\irrasimp\IrrAssimp\IrrAssimpUtils.h">
+      <Filter>IrrAsimp</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>IrrAsimp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
