--- a/Lime.vcxproj
+++ b/Lime.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="CGUIFont.cpp" />
     <ClCompile Include="DebugConsole.cpp" />
+    <ClCompile Include="EditBox.cpp" />
     <ClCompile Include="IrrHandling.cpp" />
     <ClCompile Include="Lime.cpp" />
     <ClCompile Include="Line.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="CGUIFont.h" />
     <ClInclude Include="DebugConsole.h" />
     <ClInclude Include="DebugVisual.h" />
+    <ClInclude Include="EditBox.h" />
     <ClInclude Include="Helper.h" />
     <ClInclude Include="Image2D.h" />
     <ClInclude Include="IrrHandling.h" />
