--- a/Lime.vcxproj.filters
+++ b/Lime.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Source Files\xEffects">
       <UniqueIdentifier>{1089de6d-5eb6-43d1-87f9-b08f566dd854}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\ExternalSceneNodes">
+      <UniqueIdentifier>{f302c982-ccd8-4013-ab19-4250b4360a29}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lime.cpp">
@@ -68,6 +71,9 @@
     </ClCompile>
     <ClCompile Include="CShaderPre.cpp">
       <Filter>Source Files\xEffects</Filter>
+    </ClCompile>
+    <ClCompile Include="GhostTrailSceneNode.cpp">
+      <Filter>Source Files\ExternalSceneNodes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +184,18 @@
     </ClInclude>
     <ClInclude Include="ParticleSystem.h">
       <Filter>Source Files\Scene3D</Filter>
+    </ClInclude>
+    <ClInclude Include="GhostTrailSceneNode.h">
+      <Filter>Source Files\ExternalSceneNodes</Filter>
+    </ClInclude>
+    <ClInclude Include="Trail.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Empty.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
