--- a/Lime.vcxproj.filters
+++ b/Lime.vcxproj.filters
@@ -239,6 +239,9 @@
     <ClInclude Include="Empty.h">
       <Filter>Source Files\Scene3D</Filter>
     </ClInclude>
+    <ClInclude Include="Compatible3D.h">
+      <Filter>Source Files\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Lime.rc">
