--- a/Lime.vcxproj.filters
+++ b/Lime.vcxproj.filters
@@ -28,14 +28,17 @@
     <Filter Include="Source Files\Scene2D\Deprecated\TextArea">
       <UniqueIdentifier>{6569ff38-9827-4012-a5c2-3888bf0bb9bf}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\xEffects">
-      <UniqueIdentifier>{1089de6d-5eb6-43d1-87f9-b08f566dd854}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Externals">
       <UniqueIdentifier>{f302c982-ccd8-4013-ab19-4250b4360a29}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Externals\GhostTrail">
       <UniqueIdentifier>{5424e058-1cd1-4737-979a-c3dc58255197}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Externals\xEffects">
+      <UniqueIdentifier>{1089de6d-5eb6-43d1-87f9-b08f566dd854}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Externals\IrrAssimp">
+      <UniqueIdentifier>{f55c77ff-bdfb-49e5-8773-8878923371d2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -67,10 +70,10 @@
       <Filter>Source Files\Scene2D\Deprecated\TextArea</Filter>
     </ClCompile>
     <ClCompile Include="EffectHandler.cpp">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClCompile>
     <ClCompile Include="CShaderPre.cpp">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClCompile>
     <ClCompile Include="Vector2D.cpp">
       <Filter>Source Files\Core</Filter>
@@ -128,6 +131,18 @@
     </ClCompile>
     <ClCompile Include="Hitbox.cpp">
       <Filter>Source Files\Scene3D</Filter>
+    </ClCompile>
+    <ClCompile Include="IrrAssimpImport.cpp">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClCompile>
+    <ClCompile Include="IrrAssimpUtils.cpp">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClCompile>
+    <ClCompile Include="IrrAssimp.cpp">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClCompile>
+    <ClCompile Include="IrrAssimpExport.cpp">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -213,22 +228,22 @@
       <Filter>Source Files\Scene2D</Filter>
     </ClInclude>
     <ClInclude Include="XEffects.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="EffectShaders.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="EffectCB.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="EffectHandler.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="CScreenQuad.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="CShaderPre.h">
-      <Filter>Source Files\xEffects</Filter>
+      <Filter>Source Files\Externals\xEffects</Filter>
     </ClInclude>
     <ClInclude Include="ParticleSystem.h">
       <Filter>Source Files\Scene3D</Filter>
@@ -256,6 +271,18 @@
     </ClInclude>
     <ClInclude Include="LightManager.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IrrAssimpExport.h">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClInclude>
+    <ClInclude Include="IrrAssimpImport.h">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClInclude>
+    <ClInclude Include="IrrAssimpUtils.h">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
+    </ClInclude>
+    <ClInclude Include="IrrAssimp.h">
+      <Filter>Source Files\Externals\IrrAssimp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
