--- a/Lime.vcxproj.filters
+++ b/Lime.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="Packet.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
+    <ClCompile Include="LimeReceiver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DebugConsole.h">
